# workshop-setup-mcp

./: .containerignore  .fips-template.yaml  .ggshield.yaml  .gitignore  .memoryhub.yaml  .template-info  404.html  AGENTS.md  CLAUDE.md  Makefile  README.md  deploy.sh  identity.md  index.html  mkdocs.yml  personality.md  pyproject.toml  redeploy.sh  workshop-answers.example.yaml  workshop-run-prompt.md
.claude/commands/: add-memory.md  add-skill.md  add-tool.md  create-agent.md  deploy-agent.md  exercise-agent.md  plan-agent.md  refresh-gateway-token.md
.claude/rules/: agent-development.md
.github/workflows/: docs.yml
00-model-endpoint/: index.html
01-gateway-infrastructure/: index.html
02-mcp-gateway/: index.html
03-mcp-server/: index.html  mcp-ecosystem-namespace.yaml  openshift-mcp-prerequisites.yaml
04-gateway-registration/: index.html  referencegrant.yaml
05-identity-auth/: index.html  keycloak-cr.yaml  keycloak-postgresql.yaml  setup-keycloak-realm.sh
06-agent-test/: index.html
chart/: values.yaml
chart/templates/: clamav-pvc.yaml  configmap.yaml  (+2 more)
docs/: deployment.md  mcp-ecosystem-guide-audit.md  mcp-layered-authorization.md  oauth-setup.md  per-user-mcp-identity-fix.md  per-user-mcp-identity.md  workshop-restructure-plan.md
evals/: README.md  discovery.py  mock_factory.py  run_evals.py
hooks/: acquire-token.sh  acquire-token.yaml  refresh-token.yaml
prompts/: system.md
rules/: session-continuity.md
scripts/: get-mcp-token.sh  start-with-auth.sh
search/: search_index.json
src/: token_manager.py
tools/: check_auth.py
(+350 files in other folders)
